# argus

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  amendment-doc-sync.patch  pyproject.toml
.claude/agents/: builder.md  doc-sync-agent.md  reviewer.md
.claude/rules/: api-conventions.md  architecture.md  backtesting.md  code-style.md  doc-updates.md  risk-rules.md  sprint_14_rules.md  testing.md  trading-strategies.md  universal.md
.claude/skills/: canary-test.md  close-out.md  diagnostic.md  doc-sync.md  review.md
.github/workflows/: ci.yml
argus/: __init__.py  main.py
argus/accounting/: __init__.py
argus/ai/: __init__.py  actions.py  cache.py  client.py  config.py  context.py  conversations.py  executors.py  prompts.py  service.py  summary.py  tools.py  usage.py
argus/analytics/: __init__.py  comparison.py  config.py  debrief_export.py  debrief_service.py  ensemble_evaluation.py  evaluation.py  observatory_service.py  performance.py  slippage_model.py  trade_logger.py
argus/api/: __init__.py  __main__.py  auth.py  dependencies.py  dev_state.py  serializers.py  server.py  setup_password.py
argus/backtest/: __init__.py  backtest_data_service.py  config.py  data_fetcher.py  data_validator.py  engine.py  historical_data_feed.py  manifest.py  metrics.py  replay_harness.py  report_generator.py  scanner_simulator.py  tick_synthesizer.py  vectorbt_afternoon_momentum.py  vectorbt_orb.py  vectorbt_orb_scalp.py  vectorbt_pattern.py  vectorbt_red_to_green.py  vectorbt_vwap_reclaim.py  walk_forward.py
argus/core/: __init__.py  alert_auto_resolution.py  breadth.py  clock.py  config.py  correlation.py  events.py  (+18 more)
argus/ui/src-tauri/: Cargo.toml  tauri.conf.json
argus/ui/src-tauri/capabilities/: default.json
argus/ui/src-tauri/icons/: README.md  icon.icns
argus/ui/src-tauri/src/: lib.rs  main.rs
config/: backtest_universe.yaml  brokers.yaml  counterfactual.yaml  evaluation_store.yaml  exit_management.yaml  experiments.yaml  historical_query.yaml  learning_loop.yaml  notifications.yaml  orchestrator.yaml  order_manager.yaml  overflow.yaml  quality_engine.yaml  regime.yaml  risk_limits.yaml  scanner.yaml  system.yaml  system_live.yaml  vix_regime.yaml
dev-logs/: 2026-02-15_sprint3.md  2026-03-12_sprint23.8-session1.md  2026-03-14_sprint24.1-s1a.md  2026-03-14_sprint24.1-s2.md  2026-03-14_sprint24.1-s3.md  2026-03-14_sprint24.1-s4a.md  2026-03-16_sprint24.5-s5.md  2026-03-18_sprint25.5-doc-sync.md  2026-03-21_sprint25.7-s1.md  2026-03-22_sprint27-doc-sync.md  2026-03-23_sprint21.6-s1.md  2026-03-24_sprint27.6-doc-sync.md  2026-03-30_sprint29-s1.md  2026-04-01_sprint32-s3.md  2026-04-01_sprint32.75-s1.md  2026-04-01_sprint32.75-s7.md  2026-04-02_sprint31a-param-sweep.md  2026-04-02_sprint32.9-s1-s3.md  2026-04-03_ohlcv-observability.md  2026-04-20_def159-reconstruction.md  2026-04-20_duplicate-sell.md  2026-04-20_eval-db-vacuum.md  2026-04-20_lifespan-hang.md  2026-04-28_retention-mechanism-diagnostic.md
docs/: 01_PROJECT_BIBLE.md  02_PROJECT_KNOWLEDGE.md  03_ARCHITECTURE.md  04_STRATEGY_TEMPLATE.md  05_DECISION_LOG.md  06_RISK_REGISTER.md  07_PHASE1_SPRINT_PLAN.md  08_PAPER_TRADING_GUIDE.md  09_PHASE2_SPRINT_PLAN.md  10_PHASE3_SPRINT_PLAN.md  architecture.md  argus_master_sprint_plan.md  dec-index.md  decision-log.md  deps.md  ibc-setup.md  live-operations.md  paper-trading-guide.md  pre-live-transition-checklist.md  process-evolution.md  project-bible.md  project-knowledge.md  risk-register.md  roadmap.md  sprint-campaign.md  sprint-history.md  strategy-template.md
reports/: .gitignore
scripts/: analyze_sweeps.py  audit_2026_04_21_status.py  consolidate_parquet_cache.py  diagnose_databento.py  diagnose_databento_scanner.py  diagnose_feed.py  diagnose_live_streaming.py  diagnose_position_management_lifecycle.py  generate_api_catalog.py  ibkr_close_all_positions.py  launch_monitor.sh  migrate_def159_bogus_trades.py  populate_historical_cache.py  query_cache.py  resolve_sweep_symbols.py  resolve_symbols_fast.py  revalidate_all_strategies.py  revalidate_strategy.py  run_experiment.py  run_learning_analysis.py  run_sweep_batch.sh  run_validation.py  seed_quality_data.py  smoke_test_sprint29.py  spike_def204_mechanism_a_followon.py  spike_def204_round2_path1.py  spike_def204_round2_path2.py  spike_ibkr_oca_late_add.py  sprint-runner.py  sprint_runner  start_live.sh  stop_live.sh  test_ibkr_bracket_lifecycle.py  test_ibkr_order_lifecycle.py  test_position_management_lifecycle.py  test_time_stop_eod.py  validate_all_strategies.py  validate_ibkr_resilience.py  validate_session_oca_mass_balance.py
tests/: __init__.py  conftest.py  test_config_param_alignment.py  test_def190_pyarrow_eager_import.py  test_evaluation_telemetry_e2e.py  test_experiment_cli.py  test_fix01_catalyst_db_path.py  test_fix01_load_config_merge.py  test_integration_sprint13.py  test_integration_sprint18.py  test_integration_sprint19.py  test_integration_sprint2.py  test_integration_sprint20.py  test_integration_sprint26.py  test_integration_sprint3.py  test_integration_sprint4a.py  test_integration_sprint4b.py  test_integration_sprint5.py  test_main.py  test_main_health.py  test_overflow_routing.py  test_quality_columns.py  test_runtime_wiring.py  test_shutdown_tasks.py  test_signal_rejected.py  test_sprint_25_9.py  test_sprint_27_65_s4.py  test_sprint_27_65_s4_5.py  test_startup_position_invariant.py  test_telemetry.py  test_telemetry_store.py
(+2731 files in other folders)
