[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus"
version = "0.1.0"
description = "Automated multi-strategy day trading ecosystem"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5,<3",
    "PyYAML>=6.0,<7",
    "aiosqlite>=0.19,<1",
    "python-ulid>=2.2,<3",
    "pandas>=2.0,<3",
    "pyarrow>=14.0,<18",
    "alpaca-py>=0.30,<1",
    "python-dotenv>=1.0,<2",
    "aiohttp>=3.9,<4",
    "databento>=0.40.0",
    "ib_async>=2.1.0",
    # Command Center API (Sprint 14)
    "fastapi>=0.109,<1",
    "uvicorn[standard]>=0.27,<1",
    "python-jose[cryptography]>=3.3,<4",
    "passlib[bcrypt]>=1.7,<2",
    "yfinance>=0.2.31,<1",
    "duckdb>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=4.1,<6",
    "ruff>=0.2,<1",
    "httpx>=0.26,<1",  # Test client for API tests (Sprint 14)
    "plotly>=5.18,<6",  # Backtest report generator + VectorBT visualizations
]

backtest = [
    "vectorbt>=0.28,<1",
    "numpy>=2.0,<3",
    "matplotlib>=3.9,<4",
    "scipy>=1.14,<2",
    "scikit-learn>=1.5,<2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.setuptools.packages.find]
include = ["argus*"]
