[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus"
version = "0.1.0"
description = "Automated multi-strategy day trading ecosystem"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5,<3",
    "PyYAML>=6.0,<7",
    "aiosqlite>=0.19,<1",
    "python-ulid>=2.2,<4",
    "pandas>=2.0,<3",
    "pyarrow>=14.0,<19",
    # alpaca-py: incubator-only per DEC-086. Movement to an [incubator]
    # optional-extra with feature-detection at the 4 call sites is tracked
    # via DEF-178 (see CLAUDE.md).
    "alpaca-py>=0.30,<1",
    "python-dotenv>=1.0,<2",
    "aiohttp>=3.9,<4",
    "databento>=0.40.0,<1",
    "ib_async>=2.1.0,<3",
    # Command Center API (Sprint 14)
    "fastapi>=0.109,<1",
    "uvicorn[standard]>=0.27,<1",
    # python-jose: lower bound 3.4.0 excludes CVE-2024-33663
    # (algorithm confusion, affects <3.4.0). Migration to PyJWT tracked
    # via DEF-179.
    "python-jose[cryptography]>=3.4.0,<4",
    # bcrypt: direct runtime dep (argus/api/auth.py imports bcrypt). Replaces
    # the abandoned passlib[bcrypt] wrapper removed 2026-04-22 (FIX-18 M-03).
    "bcrypt>=4.1,<6",
    "yfinance>=0.2.31,<1",
    "duckdb>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=4.1,<6",
    "pytest-xdist>=3.5,<4",  # parallel test execution via `pytest -n auto`
    "ruff>=0.2,<1",
    "httpx>=0.26,<1",
]

backtest = [
    "numpy>=2.0,<3",
    "matplotlib>=3.9,<4",
    "seaborn>=0.13,<1",  # required by argus/backtest/vectorbt_orb.py heatmap rendering; CI discovery 2026-04-22
    "scipy>=1.14,<2",
    "plotly>=5.18,<6",  # Backtest report generator + vectorbt_*.py visualizations
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: end-to-end / integration tests (broker, DB, pipeline)",
    "unit: pure unit tests (no I/O, no async fixtures)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.setuptools.packages.find]
include = ["argus*"]
